--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>PRIMEROS PASOS CON BRACKETS</title>
         <meta name="description" content="Una guía interactiva de primeros pasos para Brackets.">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="uno.css">
     </head>
     <body>
     </body>
