--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="uno.css">
     </head>
     <body>
-        <p> hola mundo</p>
+        <p> hola mundo hola</p>
     </body>
 </html>
